# PASD

./: .gitignore  spec.yaml
backend/: .env  Cargo.toml  README.md  deliveries.db
backend/migrations/2023-01-09-125210_create_deliveries/: down.sql  up.sql
backend/src/: config.rs  headermiddleware.rs  main.rs
backend/src/api/: delete_delivery_by_id.rs  get_deliveries.rs  get_delivery_by_id.rs  mod.rs  post_delivery.rs  update_delivery_by_id.rs
backend/src/db/: actions.rs  mod.rs  models.rs  schema.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: customer_app.rs  logistics_worker_app.rs  main.rs  router.rs
frontend/src/components/: create_delivery.rs  create_delivery_customer.rs  create_label.rs  create_webshop_delivery.rs  delete_delivery.rs  deliveries.rs  delivery_info.rs  file_input.rs  mod.rs  navigate_to_bidder.rs  navigate_to_delivery.rs  orders.rs  text_input.rs  update_delivery.rs  update_delivery_logistics.rs  update_preferred_delivery_date.rs  update_status.rs  webshop_model.rs
