[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
reqwasm = "0.5.0"
gloo-console = "0.2.3"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
serde_json = "1.0.91"
web-sys = { version = "0.3.60", features = ["HtmlSelectElement"] }
serde_with = "2.2.0"
